[package]
name = "trmnl-rtd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
chrono-tz = "0.10"
csv = "1.4"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.4", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
zip = { version = "8", default-features = false, features = ["deflate"] }
worker = "0.7.5"

[build-dependencies]
prost-build = "0.14"
